Добавляет попап карту

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <img src="#" alt="Кредит">
       </div>
     </div>
-<!--Графика была готова в прошлом пуле-->
+
     <div class="logotypes">
       <ul>
         <li><a href="#"><img src="img/logo-1.png" width="260" height="100" alt="logo1"></a></li>
@@ -167,6 +167,11 @@
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
       <a href="#"><img src="img/map.jpg" width="560" height="222" alt="Карта"></a>
       <a href="#" class="write-us-anchor">Напишите нам</a>
+    </div>
+    <!--Попап большая карта -->
+    <div class="map-popup">
+        <img src="img/map-big.jpg" width="960" height="559" alt="Подробная карта">
+        <button type="button" name="button">modal-close</button>
     </div>
 
   </main>
