--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
       <li><a href="#">Facebook</a></li>
       <li><a href="#">Instagram</a></li>
       <li><a href="#">Twitter</a></li>
+      <li><a href="https://htmlacademy.ru/">htmlacademy</a></li>
     </ul>
 
   </footer>
