Добавляет форму напишите нам

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a href="#" class="logo">Device</a>
     <!--форма/Поиск по сайту-->
     <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
-        <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
-        <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
+      <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
+      <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
     </form>
 
     <ul class="user-navigation">
@@ -44,65 +44,65 @@
   </header>
 
   <main class="container">
-      <!-- Слайдеры. -->
-      <div class="slider">
-        <div class="slider1">
-          <img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
-          <span class="number">01</span>
-          <p>Делай селфи, как Бен Стиллер!</p>
-          <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-          <!--форма? Подробнее-->
-          <button type="button" name="button">Подробнее</button>
-          <table>
-            <tr>
-              <th>8,5 м</th>
-              <th>5 кг</th>
-              <th>Карбон</th>
-            </tr>
-            <tr>
-              <td>Длина палки</td>
-              <td>Вес палки</td>
-              <td>Материал</td>
-            </tr>
-          </table>
-        </div>
-
-        <div class="slider2">
-            <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
-            <span class="number">02</span>
-            <p>Худеем правильно!</p>
-            <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <!--форма? Подробнее-->
-            <button type="button" name="button">Подробнее</button>
-            <table>
-              <tr>
-                <th>48 часов</th>
-              </tr>
-              <tr>
-                <td>Без подзарядки</td>
-              </tr>
-            </table>
-        </div>
-
-        <div class="slider3">
-            <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
-            <span class="number">03</span>
-            <p>Порхает как бабочка, жалит как пчела!</p>
-            <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-            <!--форма? Подробнее-->
-            <button type="button" name="button">Подробнее</button>
-            <table>
-              <tr>
-                <th>800 м</th>
-                <th>50 м</th>
-              </tr>
-              <tr>
-                <td>Дальность полета</td>
-                <td>Радиус поражения</td>
-              </tr>
-            </table>
-        </div>
+    <!-- Слайдеры. -->
+    <div class="slider">
+      <div class="slider1">
+        <img src="img/slider-1.png" width="384" height="486" alt="Селфи палка">
+        <span class="number">01</span>
+        <p>Делай селфи, как Бен Стиллер!</p>
+        <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+        <!--форма? Подробнее-->
+        <button type="button" name="button">Подробнее</button>
+        <table>
+          <tr>
+            <th>8,5 м</th>
+            <th>5 кг</th>
+            <th>Карбон</th>
+          </tr>
+          <tr>
+            <td>Длина палки</td>
+            <td>Вес палки</td>
+            <td>Материал</td>
+          </tr>
+        </table>
       </div>
+
+      <div class="slider2">
+        <img src="img/slider-2.png" width="345" height="485" alt="Фитнес-браслет">
+        <span class="number">02</span>
+        <p>Худеем правильно!</p>
+        <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+        <!--форма? Подробнее-->
+        <button type="button" name="button">Подробнее</button>
+        <table>
+          <tr>
+            <th>48 часов</th>
+          </tr>
+          <tr>
+            <td>Без подзарядки</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="slider3">
+        <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер">
+        <span class="number">03</span>
+        <p>Порхает как бабочка, жалит как пчела!</p>
+        <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+        <!--форма? Подробнее-->
+        <button type="button" name="button">Подробнее</button>
+        <table>
+          <tr>
+            <th>800 м</th>
+            <th>50 м</th>
+          </tr>
+          <tr>
+            <td>Дальность полета</td>
+            <td>Радиус поражения</td>
+          </tr>
+        </table>
+      </div>
+    </div>
 
     <div class="popular">
       <ul class="popular-items">
@@ -170,8 +170,8 @@
     </div>
     <!--Попап большая карта -->
     <div class="map-popup">
-        <img src="img/map-big.jpg" width="960" height="559" alt="Подробная карта">
-        <button type="button" name="button">modal-close</button>
+      <img src="img/map-big.jpg" width="960" height="559" alt="Подробная карта">
+      <button type="button" name="button">modal-close</button>
     </div>
 
   </main>
@@ -200,16 +200,16 @@
   </footer>
 
   <div class="write-us">
-    <b>Ваше имя:</b>
-    <!-- Форма -->
-    <b>Ваш e-mail:</b>
-    <!-- Форма -->
-    <b>Текст письма:</b>
-    <!-- Форма -->
-    <span>Отправить</span>
-
-
-
+    <form class="form-write-us" action="https://echo.htmlacademy.ru" method="post">
+      <label for="write-us-name">Ваше имя:</label>
+      <input type="text" name="name" placeholder="Имя Фамилия" id="write-us-name">
+      <label for="write-us-email">Ваш e-mail:</label>
+      <input type="text" name="e-mail" placeholder="email@example.com" id="write-us-email">
+      <label for="write-us-letter">Текст письма:</label>
+      <input type="text" name="letter" placeholder="В свободной форме" id="write-us-letter">
+    </form>
+    <button type="button" name="button">Отправить</button>
+    <button type="button" name="button">modal-close</button>
   </div>
 </body>
 
