--- a/catalog.html
+++ b/catalog.html
@@ -4,14 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс/Каталог</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="main-header">
     <a href="index.html" target="_blank" class="logo">Device</a>
-    <!--форма
-      Поиск по сайту
-      -->
+    <!--форма/Поиск по сайту-->
+    <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
+      <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
+      <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
+    </form>
+
     <ul class="user-navigation">
       <li><a href="#">Валентин Петухов</a></li>
       <li><a href="#">Выйти</a></li>
