Добавляет кнопки в сортировке

--- a/catalog.html
+++ b/catalog.html
@@ -62,6 +62,8 @@
               <li><a href="#">По типу</a></li>
               <li><a href="#">По популярности</a></li>
           </ul>
+          <button type="button" name="button">icon-up-dir</button>
+          <button type="button" name="button">icon-down-dir</button>
       </div>
 
       <div class="filter">
