Добавляет итем ховер

--- a/catalog.html
+++ b/catalog.html
@@ -119,6 +119,11 @@
             <button type="button" name="page-button-forward">Вперед</button>
         </div>
 
+        <div class="item-hover">
+            <button type="button" name="add-to-basket">В корзину</button>
+            <button type="button" name="add-to-compare">Добавить к сравнению</button>
+        </div>
+
   </main>
 
   <footer class="main-footer">
