Делает картинки ссылками

--- a/catalog.html
+++ b/catalog.html
@@ -92,19 +92,19 @@
 
         <section class="items">
             <article class="items-item">
-                <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+                <a href="#"><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></a>
                 <p>Любительская селфи-палка<span>500 руб.</span></p>
             </article>
             <article class="items-item">
-                <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
+                <a href="#"><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></a>
                 <p>Профессиональная селфи-палка<span>1500 руб.</span></p>
             </article>
             <article class="items-item">
-                <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
+                <a href="#"><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
                 <p>Непотопляемая селфи-палка<span>2500 руб.</span></p>
             </article>
             <article class="items-item">
-                <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»">
+                <a href="#"><img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»"></a>
                 <p>Селфи-палка «Следуй на мной»<span>4900 руб.</span></p>
             </article>
         </section>
