Добавляет кнопку отправки формы в поиск

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <a href="#" class="logo">Device</a>
     <!--форма/Поиск по сайту-->
     <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
-      <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
-      <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
+        <label for="button-search" class="visually-hidden">Кнопка отправки формы</label>
+        <button type="submit" name="search" id="button-search">Кнопка отправки формы</button>
+        <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
+        <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
     </form>
 
     <ul class="user-navigation">
