--- a/catalog.html
+++ b/catalog.html
@@ -12,6 +12,8 @@
     <a href="index.html" target="_blank" class="logo">Device</a>
     <!--форма/Поиск по сайту-->
     <form class="search-header" action="https://echo.htmlacademy.ru" method="get">
+      <label for="button-search" class="visually-hidden">Кнопка отправки формы</label>
+      <button type="submit" name="search" id="button-search">Кнопка отправки формы</button>
       <label for="input-search-header" class="visually-hidden">Поиск по сайту</label>
       <input type="text" name="search" placeholder="Поиск по сайту" id="input-search-header">
     </form>
