Добавляет дир-баттон в контейнер

--- a/catalog.html
+++ b/catalog.html
@@ -64,8 +64,11 @@
               <li><a href="#">По типу</a></li>
               <li><a href="#">По популярности</a></li>
           </ul>
-          <button type="button" name="button">icon-up-dir</button>
-          <button type="button" name="button">icon-down-dir</button>
+      </div>
+
+      <div class="direction">
+          <button type="button" name="dir-button">icon-up-dir</button>
+          <button type="button" name="dir-button">icon-down-dir</button>
       </div>
 
       <div class="filter">
