--- a/catalog.html
+++ b/catalog.html
@@ -26,18 +26,18 @@
     </ul>
     <nav class="main-navigation">
       <ul class="site-navigation">
-          <li>
-              <a href="#">Каталог товаров</a>
-              <!--Каталог товаров попап -->
-              <ul class="catalog-sub-menu">
-                  <li><a href="#">Виртуальная реальность</a></li>
-                  <li><a href="#">Фитнес-браслеты</a> </li>
-                  <li><a href="#">Квадрокоптеры</a></li>
-                  <li><a href="#">Моноподы для селфи</a></li>
-                  <li><a href="#">Умные часы</a></li>
-                  <li><a href="#">Экшн-камеры</a></li>
-              </ul>
-          </li>
+        <li>
+          <a href="#">Каталог товаров</a>
+          <!--Каталог товаров попап -->
+          <ul class="catalog-sub-menu">
+            <li><a href="#">Виртуальная реальность</a></li>
+            <li><a href="#">Фитнес-браслеты</a> </li>
+            <li><a href="#">Квадрокоптеры</a></li>
+            <li><a href="#">Моноподы для селфи</a></li>
+            <li><a href="#">Умные часы</a></li>
+            <li><a href="#">Экшн-камеры</a></li>
+          </ul>
+        </li>
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Гарантия</a></li>
         <li><a href="#">Контакты</a></li>
@@ -47,111 +47,125 @@
 
   <main class="container">
 
-      <div class="nav">
-        <h2>Моноподы для селфи</h2>
-        <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Каталог товаров</a></li>
-            <li><a href="#">Моноподы для селфи</a></li>
-        </ul>
-      </div>
+    <div class="nav">
+      <h2>Моноподы для селфи</h2>
+      <ul>
+        <li><a href="#">Главная</a></li>
+        <li><a href="#">Каталог товаров</a></li>
+        <li><a href="#">Моноподы для селфи</a></li>
+      </ul>
+    </div>
 
-      <div class="sort">
-          <span>Сортировка:</span>
-          <ul>
-              <!--Добавлено: ссылка в каждом элементе -->
-              <li><a href="#">По цене</a></li>
-              <li><a href="#">По типу</a></li>
-              <li><a href="#">По популярности</a></li>
-          </ul>
-      </div>
+    <div class="sort">
+      <span>Сортировка:</span>
+      <ul>
+        <!--Добавлено: ссылка в каждом элементе -->
+        <li><a href="#">По цене</a></li>
+        <li><a href="#">По типу</a></li>
+        <li><a href="#">По популярности</a></li>
+      </ul>
+    </div>
 
-      <div class="direction">
-          <button type="button" name="dir-button">icon-up-dir</button>
-          <button type="button" name="dir-button">icon-down-dir</button>
-      </div>
+    <div class="direction">
+      <button type="button" name="dir-button">icon-up-dir</button>
+      <button type="button" name="dir-button">icon-down-dir</button>
+    </div>
 
-      <div class="filter">
-          <form class="form-filter" action="https://echo.htmlacademy.ru" method="post">
-              <p>Фильтр:</p>
-              <p>Стоимость</p>
-              <!--думаю  как стоимость разметить -->
-              <input type="checkbox" name="color" id="color-black">
-              <label for="color-black">Черный</label>
-              <input type="checkbox" name="color" id="color-white">
-              <label for="color-white">Белый</label>
-              <input type="checkbox" name="color" id="color-blue">
-              <label for="color-blue">Синий</label>
-              <input type="checkbox" name="color" id="color-red">
-              <label for="color-red">Красный</label>
-              <input type="checkbox" name="color" id="color-pink">
-              <label for="color-pink">Розовый</label>
-              <p>Bluetooth</p>
-              <input type="radio" name="bluetooth" id="bluetooth-yes">
-              <label for="bluetooth-yes">Есть</label>
-              <input type="radio" name="bluetooth" id="bluetooth-no">
-              <label for="bluetooth-no">Нет</label>
-              <button type="button" name="button-show">Показать</button>
-          </form>
-      </div>
+    <div class="filter">
+      <form class="form-filter" action="https://echo.htmlacademy.ru" method="post">
+        <p>Фильтр:</p>
+        <p>Стоимость</p>
 
-        <section class="items">
-            <article class="items-item">
-                <a href="#"><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></a>
-                <p>Любительская селфи-палка<span>500 руб.</span></p>
-            </article>
-            <article class="items-item">
-                <a href="#"><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></a>
-                <p>Профессиональная селфи-палка<span>1500 руб.</span></p>
-            </article>
-            <article class="items-item">
-                <a href="#"><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
-                <p>Непотопляемая селфи-палка<span>2500 руб.</span></p>
-            </article>
-            <article class="items-item">
-                <a href="#"><img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»"></a>
-                <p>Селфи-палка «Следуй на мной»<span>4900 руб.</span></p>
-            </article>
-        </section>
+        <div class="filter-price">
+          <div class="line-price">
+            <div class="measure">
+              <div class="bar"></div>
+            </div>
+            <div class="switch min-switch"></div>
+            <div class="switch max-switch"></div>
+          </div>
 
-        <div class="pages">
-            <button type="button" name="page-button-backward">Назад</button>
-            <ul>
-                <li><button type="button" name="page-button">1</button></li>
-                <li><button type="button" name="page-button">2</button></li>
-                <li><button type="button" name="page-button">3</button></li>
-            </ul>
-            <button type="button" name="page-button-forward">Вперед</button>
+          <div class="price">
+            от <input class="price-low" type="text" value="0"> до <input class="price-high" type="text" value="5 000">
+          </div>
         </div>
 
-        <div class="item-hover">
-            <button type="button" name="add-to-basket">В корзину</button>
-            <button type="button" name="add-to-compare">Добавить к сравнению</button>
-        </div>
+        <input type="checkbox" name="color" id="color-black">
+        <label for="color-black">Черный</label>
+        <input type="checkbox" name="color" id="color-white">
+        <label for="color-white">Белый</label>
+        <input type="checkbox" name="color" id="color-blue">
+        <label for="color-blue">Синий</label>
+        <input type="checkbox" name="color" id="color-red">
+        <label for="color-red">Красный</label>
+        <input type="checkbox" name="color" id="color-pink">
+        <label for="color-pink">Розовый</label>
+        <p>Bluetooth</p>
+        <input type="radio" name="bluetooth" id="bluetooth-yes">
+        <label for="bluetooth-yes">Есть</label>
+        <input type="radio" name="bluetooth" id="bluetooth-no">
+        <label for="bluetooth-no">Нет</label>
+        <button type="button" name="button-show">Показать</button>
+      </form>
+    </div>
+
+    <section class="items">
+      <article class="items-item">
+        <a href="#"><img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка"></a>
+        <p>Любительская селфи-палка<span>500 руб.</span></p>
+      </article>
+      <article class="items-item">
+        <a href="#"><img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка"></a>
+        <p>Профессиональная селфи-палка<span>1500 руб.</span></p>
+      </article>
+      <article class="items-item">
+        <a href="#"><img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка"></a>
+        <p>Непотопляемая селфи-палка<span>2500 руб.</span></p>
+      </article>
+      <article class="items-item">
+        <a href="#"><img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй на мной»"></a>
+        <p>Селфи-палка «Следуй на мной»<span>4900 руб.</span></p>
+      </article>
+    </section>
+
+    <div class="pages">
+      <button type="button" name="page-button-backward">Назад</button>
+      <ul>
+        <li><button type="button" name="page-button">1</button></li>
+        <li><button type="button" name="page-button">2</button></li>
+        <li><button type="button" name="page-button">3</button></li>
+      </ul>
+      <button type="button" name="page-button-forward">Вперед</button>
+    </div>
+
+    <div class="item-hover">
+      <button type="button" name="add-to-basket">В корзину</button>
+      <button type="button" name="add-to-compare">Добавить к сравнению</button>
+    </div>
 
   </main>
 
   <footer class="main-footer">
-      <a href="index.html" target="_blank" class="logo-footer">Device</a>
-      <ul class="user-navigation-footer">
-          <li><a href="#">Валентин Петухов</a></li>
-          <li><a href="#">Выйти</a></li>
-          <li><a href="#">Сравнить</a></li>
-          <li><a href="#">Корзина</a></li>
-      </ul>
-      <span class="contacts-footer">г. Москва, ул. Строителей, 15</span>
-      <ul class="site-navigation-footer">
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
-      </ul>
-      <span class="contacts-footer">Тел.: +7(495)495-95-95</span>
-      <ul class="footer-sm">
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="https://htmlacademy.ru/">htmlacademy</a></li>
-      </ul>
+    <a href="index.html" target="_blank" class="logo-footer">Device</a>
+    <ul class="user-navigation-footer">
+      <li><a href="#">Валентин Петухов</a></li>
+      <li><a href="#">Выйти</a></li>
+      <li><a href="#">Сравнить</a></li>
+      <li><a href="#">Корзина</a></li>
+    </ul>
+    <span class="contacts-footer">г. Москва, ул. Строителей, 15</span>
+    <ul class="site-navigation-footer">
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Гарантия</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    <span class="contacts-footer">Тел.: +7(495)495-95-95</span>
+    <ul class="footer-sm">
+      <li><a href="#">Facebook</a></li>
+      <li><a href="#">Instagram</a></li>
+      <li><a href="#">Twitter</a></li>
+      <li><a href="https://htmlacademy.ru/">htmlacademy</a></li>
+    </ul>
 
   </footer>
 
