Добавляет чекбоксы в контейнер филдсет

--- a/catalog.html
+++ b/catalog.html
@@ -89,22 +89,27 @@
             от <input class="price-low" type="text" value="0"> до <input class="price-high" type="text" value="5 000">
           </div>
         </div>
+        <fieldset class="checkbox-color">
+                <legend>Цвет</legend>
+            <input type="checkbox" name="color" id="color-black">
+            <label for="color-black">Черный</label>
+            <input type="checkbox" name="color" id="color-white">
+            <label for="color-white">Белый</label>
+            <input type="checkbox" name="color" id="color-blue">
+            <label for="color-blue">Синий</label>
+            <input type="checkbox" name="color" id="color-red">
+            <label for="color-red">Красный</label>
+            <input type="checkbox" name="color" id="color-pink">
+            <label for="color-pink">Розовый</label>
+        </fieldset>
 
-        <input type="checkbox" name="color" id="color-black">
-        <label for="color-black">Черный</label>
-        <input type="checkbox" name="color" id="color-white">
-        <label for="color-white">Белый</label>
-        <input type="checkbox" name="color" id="color-blue">
-        <label for="color-blue">Синий</label>
-        <input type="checkbox" name="color" id="color-red">
-        <label for="color-red">Красный</label>
-        <input type="checkbox" name="color" id="color-pink">
-        <label for="color-pink">Розовый</label>
-        <p>Bluetooth</p>
-        <input type="radio" name="bluetooth" id="bluetooth-yes">
-        <label for="bluetooth-yes">Есть</label>
-        <input type="radio" name="bluetooth" id="bluetooth-no">
-        <label for="bluetooth-no">Нет</label>
+        <fieldset class="radio-bluetooth">
+                <legend>Bluetooth</legend>
+            <input type="radio" name="bluetooth" id="bluetooth-yes">
+            <label for="bluetooth-yes">Есть</label>
+            <input type="radio" name="bluetooth" id="bluetooth-no">
+            <label for="bluetooth-no">Нет</label>
+        </fieldset>
         <button type="button" name="button-show">Показать</button>
       </form>
     </div>
