Добавляет ссылки вместо кнопок в пагинации и каждому итему свой ховер с ссылкой

--- a/catalog.html
+++ b/catalog.html
@@ -134,18 +134,32 @@
     </section>
 
     <div class="item-hover">
-      <button type="button" name="add-to-basket">В корзину</button>
-      <button type="button" name="add-to-compare">Добавить к сравнению</button>
+        <div class="hover-i1">
+            <a href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+        </div>
+        <div class="hover-i2">
+            <a href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+        </div>
+        <div class="hover-i3">
+            <a href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+        </div>
+        <div class="hover-i4">
+            <a href="#">В корзину</a>
+            <a href="#">Добавить к сравнению</a>
+        </div>
     </div>
 
     <div class="pages">
-      <button type="button" name="page-button-backward">Назад</button>
+      <a href="#">Назад</a>
       <ul>
-        <li><button type="button" name="page-button">1</button></li>
-        <li><button type="button" name="page-button">2</button></li>
-        <li><button type="button" name="page-button">3</button></li>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
       </ul>
-      <button type="button" name="page-button-forward">Вперед</button>
+      <a href="#">Вперед</a>
     </div>
 
   </main>
