--- a/catalog.html
+++ b/catalog.html
@@ -183,8 +183,8 @@
       <li><a href="#">Facebook</a></li>
       <li><a href="#">Instagram</a></li>
       <li><a href="#">Twitter</a></li>
-      <li><a href="https://htmlacademy.ru/">htmlacademy</a></li>
     </ul>
+    <p class="origin"><a href="https://htmlacademy.ru/">htmlacademy</a></p>
 
   </footer>
 
