Помещает кнопку отправки в форму

--- a/index.html
+++ b/index.html
@@ -209,9 +209,10 @@
       <input type="text" name="e-mail" placeholder="email@example.com" id="write-us-email">
       <label for="write-us-letter">Текст письма:</label>
       <input type="text" name="letter" placeholder="В свободной форме" id="write-us-letter">
+      <button type="submit" name="button">Отправить</button>
     </form>
-    <button type="button" name="button">Отправить</button>
     <button type="button" name="button">modal-close</button>
+
   </div>
 </body>
 
